--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@materia/materia-token-list",
-  "version": "1.5.0",
+  "version": "1.0.0",
   "description": "◦ The Materia default token list",
   "main": "build/materia-default.tokenlist.json",
   "scripts": {
@@ -21,7 +21,7 @@
     "token",
     "list"
   ],
-  "author": "Moody Salem",
+  "author": "Mirco Ramundo",
   "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/materia-dex/materia-token-list/issues"
