--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-.idea/
-node_modules
-# build/
-**/*.log
+/**/.DS_Store
+/**/node_modules
+/**/package-lock.json
+/**/.env.mainnet
+/**/.env.ropsten
