--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "@materia-dex/materia-token-list",
-  "version": "1.4.0",
-  "description": "◦ The Materia default token list",
-  "main": "build/materia-default.tokenlist.json",
+  "name": "materia-token-list",
+  "version": "1.0.0",
+  "description": "Materia token list generated with EthItems present in ERC20WrapperV1",
+  "main": "src/index.js",
   "scripts": {
-    "test": "mocha",
-    "build": "rimraf build && mkdir -p build && node src/write.js > build/materia-default.tokenlist.json",
-    "prepublishOnly": "npm test && npm run build"
+    "start": "node src/index.js"
   },
-  "files": [
-    "build/materia-default.tokenlist.json"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/materia-dex/materia-token-list.git"
@@ -27,110 +22,9 @@
     "url": "https://github.com/materia-dex/materia-token-list/issues"
   },
   "homepage": "https://github.com/materia-dex/materia-token-list#readme",
-  "devDependencies": {
-    "@ethersproject/address": "^5.0.2",
-    "@uniswap/token-lists": "^1.0.0-beta.8",
-    "ajv": "^6.12.3",
-    "chai": "^4.2.0",
-    "mocha": "^8.0.1",
-    "rimraf": "^3.0.2"
-  },
-  "directories": {
-    "test": "test"
-  },
   "dependencies": {
-    "ansi-colors": "^4.1.1",
-    "ansi-regex": "^4.1.0",
-    "ansi-styles": "^4.3.0",
-    "assertion-error": "^1.1.0",
-    "anymatch": "^3.1.1",
-    "balanced-match": "^1.0.0",
-    "argparse": "^1.0.10",
-    "binary-extensions": "^2.1.0",
-    "braces": "^3.0.2",
-    "bn.js": "^4.11.9",
-    "brace-expansion": "^1.1.11",
-    "chalk": "^4.1.0",
-    "browser-stdout": "^1.3.1",
-    "camelcase": "^5.3.1",
-    "chokidar": "^3.4.3",
-    "check-error": "^1.0.2",
-    "cliui": "^5.0.0",
-    "color-convert": "^2.0.1",
-    "concat-map": "^0.0.1",
-    "color-name": "^1.1.4",
-    "debug": "^4.2.0",
-    "decamelize": "^1.2.0",
-    "deep-eql": "^3.0.1",
-    "diff": "^4.0.2",
-    "escape-string-regexp": "^4.0.0",
-    "emoji-regex": "^7.0.3",
-    "esprima": "^4.0.1",
-    "fast-deep-equal": "^3.1.3",
-    "find-up": "^5.0.0",
-    "fast-json-stable-stringify": "^2.1.0",
-    "fill-range": "^7.0.1",
-    "flat": "^5.0.2",
-    "fsevents": "^2.1.3",
-    "fs.realpath": "^1.0.0",
-    "glob": "^7.1.6",
-    "get-func-name": "^2.0.0",
-    "growl": "^1.10.5",
-    "he": "^1.2.0",
-    "glob-parent": "^5.1.1",
-    "has-flag": "^4.0.0",
-    "inherits": "^2.0.4",
-    "get-caller-file": "^2.0.5",
-    "is-binary-path": "^2.1.0",
-    "inflight": "^1.0.6",
-    "is-extglob": "^2.1.1",
-    "is-fullwidth-code-point": "^2.0.0",
-    "isexe": "^2.0.0",
-    "is-glob": "^4.0.1",
-    "is-plain-obj": "^2.1.0",
-    "is-number": "^7.0.0",
-    "js-sha3": "^0.5.7",
-    "js-yaml": "^3.14.0",
-    "json-schema-traverse": "^0.4.1",
-    "locate-path": "^6.0.0",
-    "minimatch": "^3.0.4",
-    "log-symbols": "^4.0.0",
-    "ms": "^2.1.2",
-    "once": "^1.4.0",
-    "nanoid": "^3.1.12",
-    "normalize-path": "^3.0.0",
-    "p-locate": "^5.0.0",
-    "p-try": "^2.2.0",
-    "p-limit": "^3.0.2",
-    "path-is-absolute": "^1.0.1",
-    "picomatch": "^2.2.2",
-    "pathval": "^1.1.0",
-    "path-exists": "^4.0.0",
-    "punycode": "^2.1.1",
-    "readdirp": "^3.5.0",
-    "randombytes": "^2.1.0",
-    "require-directory": "^2.1.1",
-    "require-main-filename": "^2.0.0",
-    "serialize-javascript": "^5.0.1",
-    "safe-buffer": "^5.2.1",
-    "sprintf-js": "^1.0.3",
-    "set-blocking": "^2.0.0",
-    "strip-ansi": "^5.2.0",
-    "string-width": "^3.1.0",
-    "supports-color": "^7.2.0",
-    "strip-json-comments": "^3.1.1",
-    "to-regex-range": "^5.0.1",
-    "type-detect": "^4.0.8",
-    "uri-js": "^4.4.0",
-    "which": "^2.0.2",
-    "which-module": "^2.0.0",
-    "wide-align": "^1.1.3",
-    "workerpool": "^6.0.2",
-    "wrappy": "^1.0.2",
-    "wrap-ansi": "^5.1.0",
-    "y18n": "^4.0.0",
-    "yargs-unparser": "^2.0.0",
-    "yargs": "^13.3.2",
-    "yargs-parser": "^13.1.2"
+    "dotenv": "^8.2.0",
+    "request": "^2.88.2",
+    "web3": "^1.3.0"
   }
 }
