--- a/.github/workflows/buildAndPublish.yml
+++ b/.github/workflows/buildAndPublish.yml
@@ -1,11 +1,15 @@
 name: Build And Publish
 
 on:
-  push:
-    branches:
-      - master
-  schedule:
-    - cron: '*/30 * * * *'
+  #push:
+  #  branches:
+  #    - master
+  
+  #schedule:
+  #  - cron: '*/30 * * * *'
+  
+  # manual trigger
+  workflow_dispatch:
 
 jobs:
   buildAndPublish:
