--- a/resources/configuration.json
+++ b/resources/configuration.json
@@ -63,6 +63,14 @@
       "decimals": 18,
       "chainId": 3,
       "logoURI": "https://raw.githubusercontent.com/materia-dex/materia-token-list/master/resources/W20-item.png"
+    },
+    {
+      "address": "0xfe6ccbd720bd2c14b92f587fc6248021d8dbc2e7",
+      "name": "DaiItem",
+      "symbol": "IDAI",
+      "decimals": 18,
+      "chainId": 3,
+      "logoURI": "https://raw.githubusercontent.com/materia-dex/materia-token-list/master/resources/W20-item.png"
     }
   ],
   "deploySearchStart": "11092976",
