--- a/.github/workflows/buildAndPublish.yml
+++ b/.github/workflows/buildAndPublish.yml
@@ -5,8 +5,8 @@ on:
   #  branches:
   #    - master
   
-  #schedule:
-  #  - cron: '*/30 * * * *'
+  schedule:
+   - cron: '*/30 * * * *'
   
   # manual trigger
   workflow_dispatch:
