Removed manual trigger from workflow action

--- a/.github/workflows/buildAndPublish.yml
+++ b/.github/workflows/buildAndPublish.yml
@@ -1,15 +1,15 @@
 name: Build And Publish
 
 on:
-  #push:
-  #  branches:
-  #    - master
+  push:
+   branches:
+     - master
   
   schedule:
    - cron: '*/30 * * * *'
   
   # manual trigger
-  workflow_dispatch:
+  # workflow_dispatch:
 
 jobs:
   buildAndPublish:
