--- a/.github/workflows/buildAndPublish.yml
+++ b/.github/workflows/buildAndPublish.yml
@@ -2,11 +2,15 @@ name: Build And Publish
 
 on:
   push:
-   branches:
-     - master
-  
+    branches:
+      - master
+      - ipfs
+
   schedule:
-   - cron: '*/15 * * * *'
+    - cron: "*/15 * * * *"
+
+  # manual trigger
+  workflow_dispatch:
 
 jobs:
   buildAndPublish:
@@ -18,56 +22,55 @@ jobs:
         node-version: [12.x]
 
     steps:
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/checkout@v2
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/checkout@v2
+      - name: Environment Preparation
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - name: Environment Preparation
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+      - name: Dependencies Installation
+        working-directory: ./
+        run: |
+          npm install
 
-    - name: Dependencies Installation
-      working-directory: ./
-      run: |
-        npm install
+      - name: Create env parameters
+        working-directory: ./
+        run: |
+          touch .env
+          echo BLOCKCHAIN_CONNECTION_STRING =${{ secrets.BLOCKCHAIN_CONNECTION_STRING }} >> .env
 
-    - name: Create env parameters
-      working-directory: ./
-      run: |
-        touch .env
-        echo BLOCKCHAIN_CONNECTION_STRING =${{ secrets.BLOCKCHAIN_CONNECTION_STRING }} >> .env
+      - name: Build JSONs
+        working-directory: ./
+        run: |
+          npm run start
 
-    - name: Build JSONs
-      working-directory: ./
-      run: |
-        npm run start
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v4
+        with:
+          author_name: Kyactus
+          author_email: materiadex@gmail.com
+          message: "Build JSONs"
+          add: " ./dist/*"
+        env:
+          GITHUB_TOKEN: ${{ secrets.COMMIT_AUTH_TOKEN }}
 
-    - name: Commit changes
-      uses: EndBug/add-and-commit@v4
-      with:
-        author_name: Kyactus
-        author_email: materiadex@gmail.com
-        message: "Build JSONs"
-        add: " ./dist/*"
-      env:
-        GITHUB_TOKEN: ${{ secrets.COMMIT_AUTH_TOKEN }}
+      - name: Pin to IPFS
+        id: upload
+        uses: anantaramdas/ipfs-pinata-deploy-action@39bbda1ce1fe24c69c6f57861b8038278d53688d
+        with:
+          pin-name: Materia Token List ${{ needs.bump_version.outputs.new_tag }}
+          path: "./dist/materia-default.tokenlist.json"
+          pinata-api-key: ${{ secrets.PINATA_API_KEY }}
+          pinata-secret-api-key: ${{ secrets.PINATA_API_SECRET_KEY }}
 
-    - name: Pin to IPFS
-      id: upload
-      uses: anantaramdas/ipfs-pinata-deploy-action@39bbda1ce1fe24c69c6f57861b8038278d53688d
-      with:
-        pin-name: Materia Token List ${{ needs.bump_version.outputs.new_tag }}
-        path: './dist/materia-default.tokenlist.json'
-        pinata-api-key: ${{ secrets.PINATA_API_KEY }}
-        pinata-secret-api-key: ${{ secrets.PINATA_API_SECRET_KEY }}
-
-    - name: Update DNS with new IPFS hash
-      env:
-        CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
-        RECORD_DOMAIN: 'materia.exchange'
-        RECORD_NAME: '_dnslink.list'
-        CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
-      uses: textileio/cloudflare-update-dnslink@0fe7b7a1ffc865db3a4da9773f0f987447ad5848
-      with:
-        cid: ${{ steps.upload.outputs.hash }}
+      - name: Update DNS with new IPFS hash
+        env:
+          CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
+          RECORD_DOMAIN: "materia.exchange"
+          RECORD_NAME: "_dnslink.list"
+          CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
+        uses: textileio/cloudflare-update-dnslink@0fe7b7a1ffc865db3a4da9773f0f987447ad5848
+        with:
+          cid: ${{ steps.upload.outputs.hash }}
