--- a/.github/workflows/buildAndPublish.yml
+++ b/.github/workflows/buildAndPublish.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   buildAndPublish:
-    runs-on: ubuntu-latest
+    runs-on: alpine/git
     env:
       working-directory: ./
     strategy:
@@ -61,7 +61,7 @@ jobs:
         uses: anantaramdas/ipfs-pinata-deploy-action@39bbda1ce1fe24c69c6f57861b8038278d53688d
         with:
           pin-name: Materia Token List ${{ needs.bump_version.outputs.new_tag }}
-          path: "./dist/materia-default.tokenlist.json"
+          path: "./dist"
           pinata-api-key: ${{ secrets.PINATA_API_KEY }}
           pinata-secret-api-key: ${{ secrets.PINATA_API_SECRET_KEY }}
 
