--- a/.github/workflows/buildAndPublish.yml
+++ b/.github/workflows/buildAndPublish.yml
@@ -13,6 +13,23 @@ on:
   workflow_dispatch:
 
 jobs:
+  bump_version:
+    name: Bump Version
+    runs-on: ubuntu-latest
+    outputs:
+      new_tag: ${{ steps.github_tag_action.outputs.new_tag }}
+      changelog: ${{ steps.github_tag_action.outputs.changelog }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Bump version and push tag
+        id: github_tag_action
+        uses: mathieudutour/github-tag-action@v4.5
+        with:
+          github_token: ${{ secrets.COMMIT_AUTH_TOKEN }}
+          release_branches: .*
+
   buildAndPublish:
     runs-on: ubuntu-latest
     env:
@@ -71,6 +88,6 @@ jobs:
           RECORD_DOMAIN: "materia.exchange"
           RECORD_NAME: "_dnslink.list"
           CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
-        uses: textileio/cloudflare-update-dnslink@0fe7b7a1ffc865db3a4da9773f0f987447ad5848
+        uses: textileio/cloudflare-update-dnslink@master
         with:
           cid: ${{ steps.upload.outputs.hash }}
