--- a/.github/workflows/buildAndPublish.yml
+++ b/.github/workflows/buildAndPublish.yml
@@ -32,6 +32,7 @@ jobs:
 
   buildAndPublish:
     runs-on: ubuntu-latest
+    needs: bump_version
     env:
       working-directory: ./
     strategy:
