--- a/.github/workflows/buildAndPublish.yml
+++ b/.github/workflows/buildAndPublish.yml
@@ -88,7 +88,7 @@ jobs:
           CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
           RECORD_DOMAIN: "materia.exchange"
           RECORD_NAME: "_dnslink.list"
-          CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_TOKEN_DNS }}
+          CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
         uses: textileio/cloudflare-update-dnslink@master
         with:
           cid: ${{ steps.upload.outputs.hash }}
